--- a/docs/custom_theme/css/extra.css
+++ b/docs/custom_theme/css/extra.css
@@ -19,18 +19,13 @@
 .md-sidebar--secondary {
   width: 10rem;
 }
-
-/* Terminal */
-[data-ty="progress"] {
-  width: 100% !important;
-  overflow-wrap: break-all;
-  overflow: hidden;
+.md-footer-meta__inner {
+  justify-content: center !important;
 }
 
-[data-termynal] > span {
-  display: block;
-}
-
-[data-termynal] {
-  width: 100% !important;
+/* DOCS */
+.doc code,
+.doc-heading * {
+  color: cyan !important;
+  /* font-size: 1em; */
 }
